Fix some styles on the presence editor and don’t allow only white space as a status.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@38132 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_identity.scss
+++ b/src/main/resources/scss/_identity.scss
@@ -199,6 +199,9 @@
 		width: 165px;
 		float: right;
 		border: none;
+		height: 27px;
+		line-height: 27px;
+		background-color: #efefef
 	}
 
 	.controls{
@@ -206,6 +209,7 @@
 		height: 30px;
 		top: -3px;
 		overflow: visible;
+		background-color: #efefef;
 		.cancel{
 			@include icon('clear_line',$top:7px,$left:-7px);
 			overflow: visible;
